# fastapi-monorepo

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
common/: utils.py
service1/: main.py
service2/: main.py
