[tool.poetry]
name = "fastapi-monorepo"
version = "0.1.0"
description = ""
authors = ["Jin <jsbs111@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_monorepo"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
